[package]
name = "usysconf"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-process = "2.0.1"
bincode = "1.3.3"
clap = "4.4.17"
dag = { git = "https://github.com/serpent-os/moss-rs.git", version = "0.1.0" }
futures = "0.3.30"
regex = "1.10.2"
serde = { version = "1.0.195", features = ["derive"] }
serde_yaml = "0.9.30"
thiserror = "1.0.56"

[[bin]]
name = "usysconf"
path = "src/bin/usysconf/main.rs"
