[package]
name = "usysconf"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-process = "2.2.3"
bincode = "1.3.3"
clap = "4.5.4"
dag = { git = "https://github.com/serpent-os/moss-rs.git", version = "0.1.0" }
futures = "0.3.30"
regex = "1.10.4"
serde = { version = "1.0.190", features = ["derive"] }
serde_yaml = "0.9.34"
thiserror = "1.0.61"

[[bin]]
name = "usysconf"
path = "src/bin/usysconf/main.rs"
