[package]
name = "usysconf"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-process = "1.8.1"
bincode = "1.3.3"
clap = { version = "4.4.7", features = ["derive"] }
dag = { git = "https://github.com/serpent-os/moss-rs.git", version = "0.1.0" }
futures = "0.3.29"
regex = "1.10.2"
serde = { version = "1.0.190", features = ["derive"] }
serde_yaml = "0.9.27"
thiserror = "1.0.50"

[[bin]]
name = "usysconf"
path = "src/bin/usysconf/main.rs"
